--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="http://api.map.baidu.com/api?v=2.0&ak=yFpYyZaE8r3IMAAIbHxx7hA3MvrDNCzY"></script>
-    <title>React App</title>
+    <title>物联网平台</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
